--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -15,9 +15,11 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         
-    - name: Make gradlew executable
-      run: chmod +x gradlew
-      
+    - name: Generate gradlew
+      run: |
+        ./gradlew wrapper --gradle-version 8.7
+        chmod +x gradlew
+        
     - name: Build APK
       run: ./gradlew assembleDebug
       
